[package]
name = "crosh"
version = "0.24.52"
authors = ["The Chromium OS Authors"]
edition = "2018"

[profile.release]
panic = "abort"
overflow-checks = true

[dependencies]
dbus = "0.6.1"
libc = "0.2.44"
remain = "*"
regex = "1.0.6"
sys_util = { path = "../../platform/crosvm/sys_util" } # provided by ebuild
system_api = { path = "../system_api" } # provided by ebuild
termion = "1.5.1"
tlsdate_dbus = { path = "../../third_party/tlsdate" } # provided by ebuild

[dev-dependencies]
tempfile = { path = "../../platform/crosvm/tempfile" } # provided by ebuild
